# ursa

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  main.py  pyproject.toml  requirements.txt  requirements2.txt
.github/workflows/: pypi.yml  ruff.yml
agent/: base.py  core.py  execution.py  execution_agent.py  hypothesizer_agent.py  planning.py  planning_agent.py  reasoning.py  research_agent.py
agents/: __init__.py  arxiv_agent.ipynb  arxiv_agent.py  base.py  code_review_agent.py  execution_agent.py  hypothesizer_agent.py  literature_agent1.py  literature_agent2.py  literature_agent3.py  memory.py  planning_agent.py  research_agent.py
docs/: arxiv_agent.md  chatollama_setup.md  combining_arxiv_and_execution.md  combining_arxiv_and_execution_neutronStar.md  execution_agent.md  humanInTheLoop_example.md  hypothesizer_agent.md  ollama.md  planning_agent.md  research_agent.md  web_search_agent.md
examples/: example-usage.py  example2.py  example2_openai.py  example_BO.py  example_BO2.py  example_DPP.py  example_DPP_fromPaper.py  example_HEA.py  example_NS_review.py  example_UQ.py  example_city_vowels.py  example_city_vowels_research.py  example_code_review.py  example_code_review_vowels.py  example_materials.py  example_materials2.py  example_materials_openai.py  example_optimal_MM.py  example_paper_replication.py  example_phasediagram_lammps.py  example_qutip.py  example_stock_revenue.py  example_surrogate.py  example_surrogate_detailed.py  example_surrogate_step_by_step.py  example_surrogates_detailed2.py
examples/combine_agents_examples/: agent_graph.py
examples/hitl_examples/: hitl_basic.py
examples/single_agent_examples/arxiv_agent/: high_entropy_alloy_papers.py  neutron_star_radius.py
examples/single_agent_examples/execution_agent/: bayesian_optimization.py  bayesian_optimization_ollama.py  integer_sum.py
examples/single_agent_examples/materials_project_agent/: mpa_example.py
examples/single_agent_examples/proposal_reviewer_agent/: LDRD_MFR_review.py
examples/single_agent_examples/research_agent/: ten_vowel_city.py
examples/single_agent_examples/symlink_fruit_sales/: fruit_sales_and_symlink.py
examples/single_agent_examples/symlink_fruit_sales/data_dir/: fruit_sales.csv
examples/single_agent_examples/websearch_agent/: ten_vowel_city.py
examples/two_agent_examples/arxiv_execute/: materials_extract_data_to_ML.py  materials_extract_data_to_plot.py  neutron_star_extract_data_to_plot.py
examples/two_agent_examples/lammps_execute/: EOS_of_Cu.py  stiffness_tensor_of_hea.py
examples/two_agent_examples/plan_execute/: city_10_vowels.py  fibonacci_finder.py  plan_execute_from_yaml.py  quantum_Rabi_QuTiP.py  scrabble.py  ubc_STAT545A_hw02.yaml
llm/: langchain_provider.py  langgraph_workflows.py  ollama_provider.py  openai_provider.py
old_workflow_testing/: execute.py  modular.py  modular_LawrenceDS.py  modular_bayesianNNvGP.py  modular_juliaGP.py  modular_statistics.py  modular_wNathans_Rabi.py  reflection.py
prompt_library/: code_review_prompts.py  execution_prompts.py  planning_prompts.py  research_prompts.py
src/oppenai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oppenai/agents/: __init__.py  arxiv_agent.py  base.py  code_review_agent.py  execution_agent.py  hypothesizer_agent.py  literature_agent.py  memory.py  planning_agent.py  proposal_reviewer_agent.py  research_agent.py
src/oppenai/prompt_library/: execution_prompts.py  hypothesizer_prompts.py  planning_prompts.py
src/oppenai/tools/: run_command.py  write_code.py
src/oppenai/util/: diff_renderer.py  parse.py
src/ursa/agents/: __init__.py  arxiv_agent.py  base.py  code_review_agent.py  execution_agent.py  hypothesizer_agent.py  lammps_agent.py  mp_agent.py  planning_agent.py  proposal_reviewer_agent.py  rag_agent.py  recall_agent.py  websearch_agent.py
src/ursa/prompt_library/: code_review_prompts.py  execution_prompts.py  hypothesizer_prompts.py  literature_prompts.py  planning_prompts.py  websearch_prompts.py
src/ursa/tools/: run_command.py
src/ursa/util/: diff_renderer.py  memory_logger.py
tests/agents/test_rag_agent/: test_rag_agent.py
tools/: __init__.py  run_command.py
workflows/: agent_debate.py  execute.py  modular.py  modular_LawrenceDS.py  modular_LawrenceMurph.py  modular_parkFactors.py  modular_parkFactors_debate.py  modular_statistics_DPP.py  modular_wNathans.py  reflection.py
